company-website/k8s/dev/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
  namespace: prasanth-dev
  labels:
    app: frontend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: dev
  template:
    metadata:
      labels:
        app: frontend
        environment: dev
    spec:
      containers:
        - name: frontend
          image: prasanth-frontend:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prasanth-dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
    environment: dev
